// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it handles goofy nesting properly 1`] = `
"
  <span
    class=\\"gatsby-resp-image-wrapper\\"
    style=\\"position: relative; display: block; ; max-width: 300px; margin-left: auto; margin-right: auto;\\"
  >
    <img
      class=\\"gatsby-resp-image-background-image\\"
      style=\\"width: 100%; height: 100%; position: relative; bottom: 0; left: 0; transition-delay: 0.5s; tranistion: opacity 0.5s; opacity: 1; background-size: cover; display: block;\\"
      src=\\"url('data:image/png;base64, iVBORw)\\"
    / >
    
      <img
        class=\\"gatsby-resp-image-image\\"
        style=\\"
      width: 100%;
      height: 100%;
      margin: 0;
      vertical-align: middle;
      position: absolute;
      top: 0;
      left: 0;
      transition: opacity 0.5s;
      transition-delay: 0.5s;
      box-shadow: inset 0px 0px 0px 400px white;\\"
        alt=\\"test\\"
        title=\\"\\"
        src=\\"not-a-real-dir/images/this-image-already-has-a-link.jpeg\\"
        srcset=\\"not-a-real-dir/images/this-image-already-has-a-link.jpeg, not-a-real-dir/images/this-image-already-has-a-link.jpeg\\"
        sizes=\\"(max-width: 650px) 100vw, 650px\\"
      />
    
  </span>
  "
`;

exports[`it leaves images that are already linked alone 1`] = `
"
  <span
    class=\\"gatsby-resp-image-wrapper\\"
    style=\\"position: relative; display: block; ; max-width: 300px; margin-left: auto; margin-right: auto;\\"
  >
    <img
      class=\\"gatsby-resp-image-background-image\\"
      style=\\"width: 100%; height: 100%; position: relative; bottom: 0; left: 0; transition-delay: 0.5s; tranistion: opacity 0.5s; opacity: 1; background-size: cover; display: block;\\"
      src=\\"url('data:image/png;base64, iVBORw)\\"
    / >
    
      <img
        class=\\"gatsby-resp-image-image\\"
        style=\\"
      width: 100%;
      height: 100%;
      margin: 0;
      vertical-align: middle;
      position: absolute;
      top: 0;
      left: 0;
      transition: opacity 0.5s;
      transition-delay: 0.5s;
      box-shadow: inset 0px 0px 0px 400px white;\\"
        alt=\\"img\\"
        title=\\"\\"
        src=\\"not-a-real-dir/image/my-image.jpg\\"
        srcset=\\"not-a-real-dir/image/my-image.jpg, not-a-real-dir/image/my-image.jpg\\"
        sizes=\\"(max-width: 650px) 100vw, 650px\\"
      />
    
  </span>
  "
`;

exports[`it leaves linked HTML img tags alone 1`] = `
"<a href=\\"https://example.org\\">
  
  <span class=\\"gatsby-resp-image-wrapper\\" style=\\"position: relative; display: block; ; max-width: 300px; margin-left: auto; margin-right: auto;\\">
    <img class=\\"gatsby-resp-image-background-image\\" style=\\"width: 100%; height: 100%; position: relative; bottom: 0; left: 0; transition-delay: 0.5s; tranistion: opacity 0.5s; opacity: 1; background-size: cover; display: block;\\" src=\\"url(&apos;data:image/png;base64, iVBORw)\\">
    
      <img class=\\"gatsby-resp-image-image\\" style=\\"
      width: 100%;
      height: 100%;
      margin: 0;
      vertical-align: middle;
      position: absolute;
      top: 0;
      left: 0;
      transition: opacity 0.5s;
      transition-delay: 0.5s;
      box-shadow: inset 0px 0px 0px 400px white;\\" alt=\\"this image already has a link\\" title=\\"\\" src=\\"not-a-real-dir/images/this-image-already-has-a-link.jpeg\\" srcset=\\"not-a-real-dir/images/this-image-already-has-a-link.jpeg, not-a-real-dir/images/this-image-already-has-a-link.jpeg\\" sizes=\\"(max-width: 650px) 100vw, 650px\\">
    
  </span>
  
</a>"
`;

exports[`it leaves single-line linked HTML img tags alone 1`] = `
"
  <span class=\\"gatsby-resp-image-wrapper\\" style=\\"position: relative; display: block; ; max-width: 300px; margin-left: auto; margin-right: auto;\\">
    <img class=\\"gatsby-resp-image-background-image\\" style=\\"width: 100%; height: 100%; position: relative; bottom: 0; left: 0; transition-delay: 0.5s; tranistion: opacity 0.5s; opacity: 1; background-size: cover; display: block;\\" src=\\"url(&apos;data:image/png;base64, iVBORw)\\">
    
      <img class=\\"gatsby-resp-image-image\\" style=\\"
      width: 100%;
      height: 100%;
      margin: 0;
      vertical-align: middle;
      position: absolute;
      top: 0;
      left: 0;
      transition: opacity 0.5s;
      transition-delay: 0.5s;
      box-shadow: inset 0px 0px 0px 400px white;\\" alt=\\"this image already has a link\\" title=\\"\\" src=\\"not-a-real-dir/images/this-image-already-has-a-link.jpeg\\" srcset=\\"not-a-real-dir/images/this-image-already-has-a-link.jpeg, not-a-real-dir/images/this-image-already-has-a-link.jpeg\\" sizes=\\"(max-width: 650px) 100vw, 650px\\">
    
  </span>
  "
`;

exports[`it transforms HTML img tags 1`] = `
"
  <a class=\\"gatsby-resp-image-link\\" href=\\"not-a-real-dir/image/my-image.jpeg\\" style=\\"display: block\\" target=\\"_blank\\" rel=\\"noopener\\">
  
  <span class=\\"gatsby-resp-image-wrapper\\" style=\\"position: relative; display: block; ; max-width: 300px; margin-left: auto; margin-right: auto;\\">
    <img class=\\"gatsby-resp-image-background-image\\" style=\\"width: 100%; height: 100%; position: relative; bottom: 0; left: 0; transition-delay: 0.5s; tranistion: opacity 0.5s; opacity: 1; background-size: cover; display: block;\\" src=\\"url(&apos;data:image/png;base64, iVBORw)\\">
    
      <img class=\\"gatsby-resp-image-image\\" style=\\"
      width: 100%;
      height: 100%;
      margin: 0;
      vertical-align: middle;
      position: absolute;
      top: 0;
      left: 0;
      transition: opacity 0.5s;
      transition-delay: 0.5s;
      box-shadow: inset 0px 0px 0px 400px white;\\" alt=\\"my image\\" title=\\"\\" src=\\"not-a-real-dir/image/my-image.jpeg\\" srcset=\\"not-a-real-dir/image/my-image.jpeg, not-a-real-dir/image/my-image.jpeg\\" sizes=\\"(max-width: 650px) 100vw, 650px\\">
    
  </span>
  
  </a>
    "
`;

exports[`it transforms images in markdown 1`] = `
"
  <a
    class=\\"gatsby-resp-image-link\\"
    href=\\"not-a-real-dir/images/my-image.jpeg\\"
    style=\\"display: block\\"
    target=\\"_blank\\"
    rel=\\"noopener\\"
  >
  
  <span
    class=\\"gatsby-resp-image-wrapper\\"
    style=\\"position: relative; display: block; ; max-width: 300px; margin-left: auto; margin-right: auto;\\"
  >
    <img
      class=\\"gatsby-resp-image-background-image\\"
      style=\\"width: 100%; height: 100%; position: relative; bottom: 0; left: 0; transition-delay: 0.5s; tranistion: opacity 0.5s; opacity: 1; background-size: cover; display: block;\\"
      src=\\"url('data:image/png;base64, iVBORw)\\"
    / >
    
      <img
        class=\\"gatsby-resp-image-image\\"
        style=\\"
      width: 100%;
      height: 100%;
      margin: 0;
      vertical-align: middle;
      position: absolute;
      top: 0;
      left: 0;
      transition: opacity 0.5s;
      transition-delay: 0.5s;
      box-shadow: inset 0px 0px 0px 400px white;\\"
        alt=\\"image\\"
        title=\\"\\"
        src=\\"not-a-real-dir/images/my-image.jpeg\\"
        srcset=\\"not-a-real-dir/images/my-image.jpeg, not-a-real-dir/images/my-image.jpeg\\"
        sizes=\\"(max-width: 650px) 100vw, 650px\\"
      />
    
  </span>
  
  </a>
    "
`;
